crates/toml_edit/tests/snapshots/invalid/ext/keys/no-eol-6.stderr
TOML parse error at line 1, column 4
  |
1 | 0=0r0=0r=falsefal=false
  |    ^
expected newline, `#`
